030-software/fluxcd/apps/whoami/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
