030-software/fluxcd/apps/whoami/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  annotations:
    dashboard.${domain}/name: whoami
    dashboard.${domain}/url: https://whoami.${domain}
    dashboard.${domain}/icon: bullseye
spec:
  hostnames:
  - whoami.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: whoami
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: X-XSS-Protection
          value: "1; mode=block"
        - name: X-Frame-Options
          value: "SAMEORIGIN"
        - name: X-Content-Type-Options
          value: "nosniff"
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains; preload"
        - name: Content-Security-Policy
          value: "upgrade-insecure-requests"
